--- a/app/services/collector/Dockerfile-dev
+++ b/app/services/collector/Dockerfile-dev
@@ -6,6 +6,10 @@ RUN apt-get update -yqq \
     netcat \
   && apt-get -q clean
 
+# set time zone
+ENV TZ=America/New_York
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 # set working directory
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
